# vulkan-ray-tracing-sandbox

./: .gitignore  CMakeLists.txt  README.md  demo.cmp.vs  main.cpp  queue.md
content/: dancing_penguin.glb
include/animation/: animation.hpp  animation_pass.hpp
include/base/: camera.hpp  configuration.hpp.in  math.hpp  raytracing_base.hpp  shader_compiler.hpp
include/base/logger/: logger.hpp
include/base/private/: stb.hpp
include/base/scene/: animator.hpp  animator.inl  material_manager.hpp  mesh.hpp  model.hpp  node.hpp  scene.hpp
include/base/scene/visitors/: acceleration_structure_builder.hpp  node_visitor.hpp  scene_geometry_references_getter.hpp
include/base/vulkan/: acceleration_structure.hpp  buffer.hpp  buffer.inl  command_buffer.hpp  context.hpp  function_pointer_table.hpp  gpu_marker_colors.hpp  image.hpp  memory.hpp  utils.hpp  utils.inl
include/dancing_penguin/: animation_pass.hpp  dancing_penguin.hpp
include/hello_triangle/: hello_triangle.hpp
include/junk_shop/: junk_shop.hpp
shaders/animation/: animation.glsl.rchit  animation.glsl.rgen  animation.glsl.rmiss  animation_pass.glsl.comp  shared.glsl
shaders/dancing_penguin/: animation_pass.glsl.comp  dancing_penguin.glsl.rchit  dancing_penguin.glsl.rgen  dancing_penguin.glsl.rmiss  ray_payload.glsl
shaders/hello_triangle/: hello_triangle.glsl.rchit  hello_triangle.glsl.rgen  hello_triangle.glsl.rmiss
shaders/junk_shop/: junk_shop.glsl.rchit  junk_shop.glsl.rgen  junk_shop.glsl.rmiss  material.glsl  pbr.glsl  ray_payload.glsl  shared.glsl
shaders/utils/: camera.glsl  geometry_properties.glsl  math_constants.glsl  normal_mapping.glsl  ray.glsl  rng.glsl  scene_geometry.glsl  texture_sampling.glsl  tone_mapping.glsl
src/animation/: animation.cpp  animation_pass.cpp
src/base/: camera.cpp  raytracing_base.cpp  shader_compiler.cpp
src/base/logger/: logger.cpp
src/base/scene/: animator.cpp  material_manager.cpp  model.cpp  node.cpp  scene.cpp
src/base/scene/visitors/: acceleration_structure_builder.cpp  scene_geometry_references_getter.cpp
src/base/vulkan/: acceleration_structure.cpp  buffer.cpp  command_buffer.cpp  function_pointer_table.cpp  gpu_marker_colors.cpp  image.cpp  memory.cpp  utils.cpp
src/dancing_penguin/: animation_pass.cpp  dancing_penguin.cpp
src/hello_triangle/: hello_triangle.cpp
src/junk_shop/: junk_shop.cpp
